--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Places Of Interest</string>
+    <string name="image_description">Image of a place</string>
 </resources>
